# rs-seed-otp

./: Cargo.toml  Dockerfile  README.md
.cargo/: config
.github/workflows/: ci.yaml  docker.yaml
hack/: platform.sh
src/: lib.rs  main.rs
