[package]
name = "seed-otp"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
base64 = "0.21.0"
anyhow = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
colored_json = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["english"]
english = []
french = []
italian = []
spanish = []
japanese = []
korean = []
chinese_simplified = []
chinese_traditional = []