[package]
name = "seed-otp"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.2"
base64 = "0.22.1"
anyhow = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
colored_json = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["english"]
english = []
french = []
italian = []
spanish = []
japanese = []
korean = []
chinese_simplified = []
chinese_traditional = []
